# fast_rs

./: README.md  pyproject.toml
fast_rs/: rs.py  util.py
