[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_rs"
version = "0.1.0"
authors = [{name = "Pawel Tomasz Pieta", email = "papi@dtu.dk"}]
description = "Fast sphericity and roundness in 2D and 3D using local thickness"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["fast_rs"]